# horpachCC

./: .gitignore  CHANGELOG.md  README.md  config.yaml  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  PROJECT_SPEC.md
horpach_catalog_control/: __init__.py
src/horpach_catalog_control/: __init__.py  analysis.py  benzara_parser.py  cli.py  config.py  constants.py  data_quality.py  decisions.py  excel_report.py  logistics.py  matcher.py  models.py  price_exports.py  supplier_classification.py  utils.py  woo_wxr_parser.py
tests/: test_analysis_pipeline.py  test_benzara_parser.py  test_data_quality.py  test_logistics.py  test_matcher.py  test_supplier_classification.py  test_woo_wxr_parser.py
tests/fixtures/: benzara_sample.xml  woo_wxr_sample.xml
